# velik-schedule-bot

./: .gitignore  Cargo.toml  README.md
data/: schedule.packed  subjects.packed
migrations/: 20230930092047_schema.sql  20231006102717_users.sql
src/: bot.rs  config.rs  data.rs  db.rs  display.rs  lib.rs  main.rs
