[package]
name = "schedule-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async_once = "0.2.6"
chrono = "0.4.31"
chrono-tz = "0.8.3"
config = "0.13.3"
dptree = "0.3.0"
emojis = "0.6.1"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
